# effective_cpp_v3

./: READEME.md  clear-all-build.sh
explicit/: CMakeLists.txt  build.sh  test.cpp
tip04/: CMakeLists.txt  test.cpp
tip12/: Customer.cpp  Customer.h  a.out
tip20/: test.cpp  test.h
tip29/: build.sh  test.cpp
tip31/: MyInterface.cpp  MyInterface.h  MyInterfaceImpl.cpp  MyInterfaceImpl.h
tip35/: CMakeLists.txt  example-template.cpp  example.cpp  go.sh  pointer-example.cpp  virtual-replace.cpp
tip40/: CMakeLists.txt  example.cpp  example2.cpp  example3.cpp
tip41/: example.cpp
tip43/: CMakeLists.txt  example.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
tip45/: example.cpp  go.sh
tip46/: CMakeLists.txt  example.cpp
tip47/: example.cpp
tip48/: example.cpp
tip49/: example.cpp
